// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskCard Snapshot TaskCard renders correctly for COMPLETED task 1`] = `
<div>
  <div
    class="border rounded-lg p-4 mb-4 shadow-sm bg-green-100 border-green-400"
  >
    <div
      class="flex justify-between items-start"
    >
      <h3
        class="font-bold text-lg"
      >
        Test Task
      </h3>
      <span
        class="text-sm font-medium px-2 py-1 rounded-full bg-gray-200"
      >
        COMPLETED
      </span>
    </div>
    <p
      class="text-gray-600 mt-1"
    >
      Description for test task
    </p>
    <div
      class="mt-3 grid grid-cols-2 gap-2"
    >
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Developer:
        </p>
        <p>
          Sadrac Aramburo
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Story Points:
        </p>
        <p>
          5
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Estimated Hours:
        </p>
        <p>
          8
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Actual Hours:
        </p>
        <p>
          0
        </p>
      </div>
    </div>
    <div
      class="mt-4 flex gap-2"
    />
  </div>
</div>
`;

exports[`TaskCard Snapshot TaskCard renders correctly for IN_PROGRESS task 1`] = `
<div>
  <div
    class="border rounded-lg p-4 mb-4 shadow-sm bg-blue-100 border-blue-400"
  >
    <div
      class="flex justify-between items-start"
    >
      <h3
        class="font-bold text-lg"
      >
        Test Task
      </h3>
      <span
        class="text-sm font-medium px-2 py-1 rounded-full bg-gray-200"
      >
        IN_PROGRESS
      </span>
    </div>
    <p
      class="text-gray-600 mt-1"
    >
      Description for test task
    </p>
    <div
      class="mt-3 grid grid-cols-2 gap-2"
    >
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Developer:
        </p>
        <p>
          Sadrac Aramburo
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Story Points:
        </p>
        <p>
          5
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Estimated Hours:
        </p>
        <p>
          8
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Actual Hours:
        </p>
        <p>
          0
        </p>
      </div>
    </div>
    <div
      class="mt-4 flex gap-2"
    >
      <button
        class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600"
      >
        Edit
      </button>
      <div
        class="flex items-center"
      >
        <input
          class="border rounded w-16 px-2 py-1 mr-2"
          placeholder="Hours"
          type="number"
          value="0"
        />
        <button
          class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600"
        >
          Complete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskCard Snapshot TaskCard renders correctly for TODO task 1`] = `
<div>
  <div
    class="border rounded-lg p-4 mb-4 shadow-sm bg-yellow-100 border-yellow-400"
  >
    <div
      class="flex justify-between items-start"
    >
      <h3
        class="font-bold text-lg"
      >
        Test Task
      </h3>
      <span
        class="text-sm font-medium px-2 py-1 rounded-full bg-gray-200"
      >
        TODO
      </span>
    </div>
    <p
      class="text-gray-600 mt-1"
    >
      Description for test task
    </p>
    <div
      class="mt-3 grid grid-cols-2 gap-2"
    >
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Developer:
        </p>
        <p>
          Sadrac Aramburo
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Story Points:
        </p>
        <p>
          5
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Estimated Hours:
        </p>
        <p>
          8
        </p>
      </div>
      <div>
        <p
          class="text-sm text-gray-500"
        >
          Actual Hours:
        </p>
        <p>
          0
        </p>
      </div>
    </div>
    <div
      class="mt-4 flex gap-2"
    >
      <button
        class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600"
      >
        Edit
      </button>
      <div
        class="flex items-center"
      >
        <input
          class="border rounded w-16 px-2 py-1 mr-2"
          placeholder="Hours"
          type="number"
          value="0"
        />
        <button
          class="bg-green-500 text-white px-3 py-1 rounded hover:bg-green-600"
        >
          Complete
        </button>
      </div>
    </div>
  </div>
</div>
`;
